--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
 		}
 	},
 	"include": ["src/**/*.ts", "src/**/*.tsx"],
-	"exclude": ["node_modules", "typecheck-envs", "results"]
+	"exclude": ["node_modules", "results"]
 }
