fix: relax AST file scoping, expand AI SDK v4 reference, and improve Nia prompt
- Remove file: page.tsx constraint from cacheLife/cacheTag AST checks in
  nextjs-16-cache-components so agents placing cache logic in separate files
  are not penalized
- Add system parameter to AI SDK v4 reference to prevent false-positive
  hallucination flags from the judge
- Update ai-sdk-4-generate-object rubric to accept result.object property
  access alongside destructuring
- Guide Nia prompt to prefer version-tagged repos over docs for
  version-specific API lookups

--- a/tasks/bleeding_edge/nextjs-16-cache-components.json
+++ b/tasks/bleeding_edge/nextjs-16-cache-components.json
@@ -15,24 +15,20 @@
 			{
 				"type": "import_exists",
 				"name": "cacheLife",
-				"from": "next/cache",
-				"file": "page.tsx"
+				"from": "next/cache"
 			},
 			{
 				"type": "import_exists",
 				"name": "cacheTag",
-				"from": "next/cache",
-				"file": "page.tsx"
+				"from": "next/cache"
 			},
 			{
 				"type": "call_exists",
-				"call": "cacheLife",
-				"file": "page.tsx"
+				"call": "cacheLife"
 			},
 			{
 				"type": "call_exists",
-				"call": "cacheTag",
-				"file": "page.tsx"
+				"call": "cacheTag"
 			},
 			{
 				"type": "import_exists",
@@ -42,13 +38,11 @@
 			},
 			{
 				"type": "call_absent",
-				"call": "unstable_cacheLife",
-				"file": "page.tsx"
+				"call": "unstable_cacheLife"
 			},
 			{
 				"type": "call_absent",
-				"call": "unstable_cacheTag",
-				"file": "page.tsx"
+				"call": "unstable_cacheTag"
 			}
 		]
 	},
